--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -2,10 +2,10 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">We've got what you need!</h2>
+                <h2 class="section-heading">You walk it, You Talk It, You've Got It!</h2>
                 <hr class="light">
-                <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+                <p class="text-faded">Pageants Eye is the first ever initiative taken to change the narrative of pageants in Kenya. We provide real-time solutions to aspiring and current title holders, beauty kings and queens. </p>
+                <a href="#services" class="btn btn-default btn-xl">What we offer.</a>
             </div>
         </div>
     </div>
