--- a/_includes/services.html
+++ b/_includes/services.html
@@ -12,29 +12,29 @@
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                    <h3>Sturdy Templates</h3>
-                    <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                    <h3>Pageant Coaching</h3>
+                    <p class="text-muted">We partner and work with the best pageant coaches to ensure you get ready for your pageant in good time.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                    <h3>Ready to Ship</h3>
-                    <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                    <h3>Shop with us</h3>
+                    <p class="text-muted">We specialize in making the best creative wear designs for your pageants and better still, we do deliveries!</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                    <h3>Up to Date</h3>
-                    <p class="text-muted">We update dependencies to keep things fresh.</p>
+                    <h3>Pageant Gossip</h3>
+                    <p class="text-muted">We have a blog on all things pageants! Keep tuned for all things pageant tips, pageant news and pageant gossip!</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                    <h3>Made with Love</h3>
-                    <p class="text-muted">You have to make your websites with love these days!</p>
+                    <h3>Pageant Consultation</h3>
+                    <p class="text-muted">Talk to us and let us stress on your behalf! We are here to guide you through winning your next pageant.</p>
                 </div>
             </div>
         </div>
