--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,7 +1,7 @@
 <section class="no-padding" id="portfolio">
     <div class="container-fluid">
         <div class="row no-gutter">
-            <div class="col-xl-4 col-sm-6">
+            <div class="col-lg-4 col-sm-4">
                 <a href="#" class="portfolio-box">
                     <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
@@ -16,7 +16,8 @@
                     </div>
                 </a>
             </div>
-            <div class="col-xl-4 col-sm-6">
+            <!-- <div class="col-xl-4 col-sm-6"> -->
+                <div class="col-lg-4 col-sm-4">
                 <a href="#" class="portfolio-box">
                     <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
@@ -31,7 +32,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-xl-4 col-sm-6">
+            <div class="col-lg-4 col-sm-4">
                 <a href="#" class="portfolio-box">
                     <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
@@ -46,7 +47,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-xl-4 col-sm-6">
+            <div class="col-lg-4 col-sm-4">
                 <a href="#" class="portfolio-box">
                     <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
@@ -61,7 +62,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-xl-4 col-sm-6">
+            <div class="col-lg-4 col-sm-4">
                 <a href="#" class="portfolio-box">
                     <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
@@ -76,7 +77,7 @@
                     </div>
                 </a>
             </div>
-            <div class="col-xl-4 col-sm-6">
+            <div class="col-lg-4 col-sm-4">
                 <a href="#" class="portfolio-box">
                     <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
